# BiOrbit-backend-python-image-processing

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
downloading-images/: AtmosphericCorrection.py  NDVI.py  main.py  processing.py  satelliteAPI.py
processing-images/: NDVI.py  processing.py
