[tool.poetry]
name = "biorbit-backend-python-image-processing"
version = "0.1.0"
description = ""
authors = ["bioorbit_team"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.4.4"
Pillow = "9.2.0"
pycosat = "0.6.3"
PyYAML = "6.0"
python-decouple = "^3.8"
geopandas = "^0.12.2"
folium = "^0.14.0"
beautifulsoup4 = "^4.11.2"
selenium = "^4.8.2"
rasterio = "^1.3.6"
Send2Trash = "^1.8.0"
GDAL = "3.3.2"
unpackqa = "^0.2.1"
rioxarray = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
